<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/test_your_pict_here"
            android:textColor="@color/txt_app"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="270dp"
            android:layout_height="360dp"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            app:cardBackgroundColor="@color/bg_cardview"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="250dp"
                android:fontFamily="@font/poppins_medium"
                android:text="Choose image below"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/img_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_preview"
                android:scaleType="centerCrop"
                android:src="@drawable/png_nodrugs2"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/img_preview_sample"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="80dp"
                android:contentDescription="@string/image_preview"
                android:src="@drawable/ic_selfie"
                android:visibility="visible" />

        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:max="100"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:progress="40" />

        <Button
            android:id="@+id/btn_predict"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryLightColor"
            android:visibility="gone"
            android:text="@string/predict"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="12dp"
            android:elevation="2dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar">

            <Button
                android:id="@+id/btn_take_picture"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/primaryLightColor"
                android:drawableLeft="@drawable/ic_camera"
                android:elevation="8dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="10dp"
                android:text="@string/camera"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:cornerRadius="12dp"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btn_add_picture"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:backgroundTint="?attr/colorOnPrimary"
                android:drawableLeft="@drawable/ic_folder"
                android:elevation="5dp"
                android:fontFamily="@font/poppins"
                android:padding="10dp"
                android:text="@string/gallery"
                android:textColor="?attr/colorPrimary"
                android:textSize="14sp"
                app:cornerRadius="12dp"
                app:strokeColor="?attr/colorPrimary"
                app:strokeWidth="2dp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/result"
            android:textColor="@color/txt_app"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryLightColor"
            app:cardCornerRadius="10dp"
            android:layout_margin="16dp"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TextView
                android:id="@+id/tv_result_predict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="12dp"
                android:text="@string/tv_result"
                android:textAlignment="viewStart" />

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>