<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.information.InformationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/information"
        android:textColor="@color/txt_app"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/drug1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/png_drug1"
        app:layout_constraintStart_toStartOf="@+id/tv_item_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/txt_app"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:text="@string/content" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/drug1"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
        android:text="@string/content_feature" />

    <ImageView
        android:id="@+id/drug2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/png_nodrugs2"
        app:layout_constraintStart_toStartOf="@+id/tv_item_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_title2"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_item_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:ellipsize="end"
        android:textSize="18sp"
        android:textColor="@color/txt_app"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        android:text="@string/contento" />

    <TextView
        android:id="@+id/tv_description2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/drug2"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_title2"
        android:text="@string/content_feature" />

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/activity_main_youtubePlayerView"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            app:autoPlay="true"
            android:elevation="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description2"
            app:showFullScreenButton="true"
            app:videoId="NSDUFfzpB-k" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>